<resources>

    <string name="key">SHAREDPREFERENCE_KEY</string>
    <string name="bemvindo">Seja bem-vindo ao Emprice!</string>
    <string name="digitenome">Digite seu nome</string>

    <string name="digiteemail">Digite seu e-mail</string>
    <string name="digitesenha">Digite sua senha</string>
    <string name="explicaçãologin">Para começar, vamos definir um nome de usuário e uma senha para que apenas pessoas autorizadas tenham acesso
    ao seu aplicativo.</string>
    <string name="login">Cadastro:</string>
    <string name="novocadastro">Novo Cadastro:</string>
    <string name="confirmasenha">Confirme sua senha</string>
    <string name="botaoLogin">Cadastrar</string>
    <string name="botaoNewLogin">Confirmar Novo Cadastro</string>

    <string name="app_name">Emprice - Orçamentos</string>
    <string name="title_activity_matrizes">Matrizes</string>
    <string name="texto_matrizes">Digite os dados dos gastos com matéria prima</string>
    <string name="txt_botao_addmp">Adicionar à lista</string>
    <string name="txt_botao_delmp">Remover último item da lista</string>
    <string name="edittxt_mp">Matéria Prima</string>
    <string name="edttxt_precoMP">Preço da Matéria Prima</string>
    <string name="edttxt_qtdMP">Quantidade Usada</string>

    <string name="DesPergunta1">Quanto de aluguel você gasta por mês no seu negócio? </string>
    <string name="DesPergunta2">Quanto de energia você gasta por mês no seu negócio? (R$)</string>
    <string name="DesPergunta3">Quanto de combustível você gasta por mês no seu negócio?(não só em transporte, mas por exemplo gás de cozinha) (R$)</string>
    <string name="DesPergunta4">Quanto de água você gasta por mês no seu negócio? (R$)</string>
    <string name="DesPergunta5">Quanto tempo você gasta para produzir este produto ou serviço? (Em horas)</string>
    <string name="DesPergunta6">Quanto você pretende lucrar em média no mês? Por padrão a resposta é 1 salário mínimo.</string>
    <string name="botãoDes">Realizar Cálculo</string>

    <string name="margem">Margem:</string>
    <string name="explicacaomargem">Este é o valor mínimo que deve ser cobrado para que não haja prejuízo.
        É o quanto dos seus gastos foram destinados a este produto. Recomenda-se que o preço final seja maior que este valor.</string>
    <string name="preco">Preço:</string>
    <string name="explicacaopreco">Este é o valor sugerido para ser o preço final do produto a partir dos dados fornecidos,
        para obter o lucro médio desejado supondo uma jornada de trabalho de 8h por dia, 5 dias por semana.</string>
    <string name="pergunta">Deseja utilizar este valor como preço do produto? Caso não, mude-o agora e confirme, ou então apenas confirme.</string>
    <string name="botaofinal">Confirmar Preço</string>
</resources>
