<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_calculo_despesas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.denesleal.precificacao.CalculoDespesas">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:background="@color/fundolista"
        android:textSize="18dp"
        android:textColor="@color/cortexto"
        android:text="@string/DesPergunta1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" />

    <EditText
        android:background="@color/fundoedt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edtAluguel"
        android:hint="0"
        android:textColorHint="@color/cortexto"/>

    <TextView
        android:background="@color/fundolista"
        android:textSize="18dp"
        android:textColor="@color/cortexto"
        android:text="@string/DesPergunta2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5" />

    <EditText
        android:hint="0"
        android:textColorHint="@color/cortexto"
        android:background="@color/fundoedt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edtEnergia" />

    <TextView
        android:background="@color/fundolista"
        android:textSize="18dp"
        android:textColor="@color/cortexto"
        android:text="@string/DesPergunta3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6" />

    <EditText
        android:background="@color/fundoedt"
        android:layout_width="match_parent"
        android:hint="0"
        android:textColorHint="@color/cortexto"
        android:layout_height="50dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edtCombustivel" />

    <TextView
        android:background="@color/fundolista"
        android:textSize="18dp"
        android:textColor="@color/cortexto"
        android:text="@string/DesPergunta4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7" />

    <EditText
        android:background="@color/fundoedt"
        android:layout_width="match_parent"
        android:hint="0"
        android:textColorHint="@color/cortexto"
        android:layout_height="50dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edtAgua" />

    <TextView
        android:background="@color/fundolista"
        android:textSize="18dp"
        android:textColor="@color/cortexto"
        android:text="@string/DesPergunta5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8" />

    <EditText
        android:background="@color/fundoedt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="numberDecimal"
        android:hint="0"
        android:textColorHint="@color/cortexto"
        android:ems="10"
        android:id="@+id/edtTempo" />

    <TextView
        android:background="@color/fundolista"
        android:textSize="18dp"
        android:textColor="@color/cortexto"
        android:text="@string/DesPergunta6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView9" />

    <EditText
        android:background="@color/fundoedt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="numberDecimal"
        android:text="866"
        android:ems="10"
        android:id="@+id/edtLucro" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/botãoDes"
        android:onClick="Calculo"/>
</LinearLayout>
    </ScrollView>
</LinearLayout>
