<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:text="@string/margem"
        android:textSize="30dp"
        android:textColor="@color/cortexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="TextView"
        android:textSize="30dp"
        android:textColor="@color/cortexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMargem" />

    <TextView
        android:layout_margin="5dp"
        android:text="@string/explicacaomargem"
        android:textSize="20dp"
        android:textColor="@color/cortexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView12" />

    <TextView
        android:layout_margin="5dp"
        android:text="@string/preco"
        android:textSize="30dp"
        android:textColor="@color/cortexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView13" />

    <TextView
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:text="TextView"
        android:textSize="30dp"
        android:textColor="@color/cortexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPreco"></TextView>
        <TextView
            android:layout_margin="5dp"
            android:text="@string/explicacaopreco"
            android:textSize="20dp"
            android:textColor="@color/cortexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Qual será o nome do produto cadastrado?"
            android:textColor="@color/cortexto"
            android:textSize="20dp"
            android:layout_margin="5dp"/>
        <EditText
            android:id="@+id/edtNomeProduto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:inputType="text"
            android:textColor="@color/cortexto"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pergunta"
            android:textColor="@color/cortexto"
            android:textSize="20dp"
            android:layout_margin="5dp"/>
        <EditText
            android:id="@+id/edtvalorfinal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:inputType="numberDecimal"
            android:textColor="@color/cortexto"
            android:layout_margin="5dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/botaofinal"
            android:onClick="atualizaBD"/>
    </LinearLayout>
</ScrollView>


</LinearLayout>